# src/models/User.model.js
@@ -16,6 +16,7 @@ const userSchema = new mongoose.Schema(
     email: { type: String, required: true, unique: true },
     passwordHash: { type: String, required: true },
     role: { type: String, enum: ["user", "admin"], default: "user" },
+    isBlocked: { type: Boolean, default: false },
     phone: { type: String },
     phoneVerified: { type: Boolean, default: false },
     smsVerificationCode: { type: String },
